# chatty-friend

./: .gitignore  CNAME  CONTRIBUTING.md  LICENSE  README.md  amanda.onnx  amanda.tflite  apply_ram_drive.sh  chatty_async_manager.py  chatty_communications.py  chatty_config.py  chatty_debug.py  chatty_dsp.py  chatty_embed.py  chatty_encryption.py  chatty_friend.py  chatty_keyboard.py  chatty_mic.py  chatty_realtime_messages.py  chatty_run_and_upgrade.sh  chatty_secrets.py  chatty_send_audio.py  chatty_speaker.py  chatty_state.py  chatty_supabase.py  chatty_supervisor.py  chatty_tools.py  chatty_web.py  chatty_wifi.py  create-log-dirs.service  create-log-dirs.sh  debug_client.py  example_secrets.json  git_clone_chatty.sh  install_chatty_friend_prereqs.sh  oliver.onnx  oliver.tflite  pyproject.toml  requirements.txt  run_chatty.sh  (+5 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: hardware-setup.md  tool-development.md  troubleshooting.md
supabase/migrations/: 001_create_tables.sql
tests/: test_wake_detection.py  wake_word_test_cases.json
tools/: chatty_math.py  communication_tool.py  get_date_time.py  go_to_sleep_tool.py  google_search.py  llm_tool_base.py  news_service.py  research_topic.py  system_info_tool.py  voice_changer.py  weather_service.py
